--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,6 +1,10 @@
 <nav class="nav">
-  <a href="/index.html" data-page="home">Home</a>
-  <a href="/projects.html" data-page="projects">Projects</a>
-  <a href="/about.html" data-page="about">About</a>
-  <a href="/contact.html" data-page="contact">Contact</a>
+  <div class="nav-inner">
+    <ul>
+      <li class="nav-item"><a href="/index.html" data-page="home">Home</a></li>
+      <li><a href="/projects.html" data-page="projects">Projects</a></li>
+      <li><a href="/about.html" data-page="about">About</a></li>
+      <li><a href="/contact.html" data-page="contact">Contact</a></li>
+    </ul>
+  </div>
 </nav>
