--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,10 +1,18 @@
 <nav class="nav">
   <div class="nav-inner">
     <ul>
-      <li class="nav-item"><a href="/index.html" data-page="home">Home</a></li>
-      <li><a href="/projects.html" data-page="projects">Projects</a></li>
-      <li><a href="/about.html" data-page="about">About</a></li>
-      <li><a href="/contact.html" data-page="contact">Contact</a></li>
+      <li class="nav-item">
+        <a href="/" data-page="home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a href="/projects.html" data-page="projects">Projects</a>
+      </li>
+      <li class="nav-item">
+        <a href="/about.html" data-page="about">About</a>
+      </li>
+      <li class="nav-item">
+        <a href="/contact.html" data-page="contact">Contact</a>
+      </li>
     </ul>
   </div>
 </nav>
