--- a/projects/recipes/partials/recipe_template.html
+++ b/projects/recipes/partials/recipe_template.html
@@ -4,6 +4,7 @@
     <meta name="viewport"
         content="width=device-width,
                 initial-scale=1" />
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/nav.css">
     <title>Lewis de Zoete Grundy</title>
