--- a/projects/recipes/partials/recipe_template.html
+++ b/projects/recipes/partials/recipe_template.html
@@ -10,7 +10,7 @@
     <title>Lewis de Zoete Grundy</title>
 </head>
 
-<body>
+<body data-page="projects">
 <!-- Nav bar -->
 <div id="nav"></div>
 
